<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="project.com.qrdemo.QrDashboard">

    <EditText
        android:id="@+id/ed_qrtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/qrhint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnScan" />

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btngenerate" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_qr"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp" />

</LinearLayout>
